Kubernetes/App/webapp_loadBalancer.yaml
apiVersion: v1
kind: Service
metadata:
    name: webapp-load-balancer
spec:
    type: LoadBalancer
    selector:
        app: webapp-service
    ports:
      - name: http
        port: 80
        targetPort: 80
        protocol: TCP
