Kubernetes/App/webapp_service.yaml
apiVersion: v1
kind: Service
metadata:
    name: webapp-service
spec:
    type: NodePort
    selector:
        app: webapp-service
    ports:
      - name: https
        port: 443
